<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">

<item android:title="@string/action_add"
    android:icon = "@drawable/ic_plus"
    app:showAsAction="always"
    android:id="@+id/action_add"/>


    <item android:title="@string/action_most_time_left"
         android:id="@+id/action_sort_by_descending_date"/>

    <item
        android:id="@+id/action_sort_by_ascending_date"
        android:title="@string/action_least_time_left"
        />

    <item
        android:id="@+id/action_show_completed"
        android:title="@string/action_show_complete"
        />

    <item
        android:id="@+id/action_show_incomplete"
        android:title="@string/action_show_pending"
        />
</menu>