<?xml version="1.0" encoding="utf-8"?>



<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_dialog">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/add_a_drop_dialog_fragment_title"
            android:textSize="@dimen/tv_title_font_size"
            android:layout_alignParentTop="true"

            android:layout_marginBottom="36dp"
            android:layout_marginTop="36dp"
            android:layout_alignParentLeft="true"

            />

        <ImageButton
            android:background="@null"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/btn_close"
            android:src="@drawable/ic_clear"


            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_drop"
            android:hint="@string/hint_et_drop"
            android:layout_below="@+id/tv_title"
            android:layout_alignParentStart="true"
            android:inputType="textVisiblePassword"
            android:padding="16dp"
            android:background="@drawable/bg_et_what_is_your_goal_dialog"

            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            />

        <!--this is used with java file in widgets package - CustomDatePickerView-->
        <com.jayc6678.bucketdrops.widgets.CustomDatePickerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/datePicker"
            android:layout_below="@+id/et_drop"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="50dp"

            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_a_drop_dialog_fragment"
            android:id="@+id/btn_add_it"
            android:textSize="28sp"
            android:textAllCaps="false"
            android:layout_below="@id/datePicker"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/bg_btn_add_a_drop"/>


    </RelativeLayout>

</ScrollView>

